--- a/style1.css
+++ b/style1.css
@@ -34,9 +34,9 @@ h3 {
 
 /* Zprava */
 .zprava {
-    border: 1px solid #9DC2F8;
-    background: #DBE8F8;
-    padding: 3px;
+    border: 2px solid #f4f852;
+    background: #f5f8bb;
+    padding: 5px;
 }
 
 
