--- a/views/myaccount.phtml
+++ b/views/myaccount.phtml
@@ -7,11 +7,13 @@
 
 <?php if ($role == 1) : ?>
     <p>Jsi přihlášen(a) jako recenzent. Můžeš vkládat a hodnotit články.</p><br />
+    <h4><a href="assignments">Články přidělené k recenzi</a></h4>
 <?php endif ?>
 
 <?php if ($role == 2) : ?>
     <p>Jsi přihlášen(a) jako admin. Můžeš vkládat a schvalovat články. Můžeš spravovat uživatele stránky. </p><br />
     <h4><a href="listofusers">Správa uživatelů</a></h4>
+    <h4><a href="assignments">Přidělování článků k recenzi</a></h4>
 <?php endif ?>
 
 <h4><a href="editor">Vložit článek</a></h4>
