--- a/style1.css
+++ b/style1.css
@@ -16,20 +16,21 @@ body {
 
 h1 {
     text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
     color: #444444;
-    text-shadow: 3px 3px 3px #aaaaaa;
+    text-shadow: 1px 1px 1px #aaaaaa;
 }
 
 h2 {
     text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
     color: #444444;
-    text-shadow: 3px 3px 3px #aaaaaa;
 }
 
 h3 {
     text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
     color: #444444;
-    text-shadow: 3px 3px 3px #aaaaaa;
 }
 
 /* Zprava */
@@ -41,32 +42,28 @@ h3 {
 
 
 /**************************** Navigation *******************************/
-#colorful-nav {
+#navigation {
     padding-bottom: 0px;
     border: 0px transparent;
-}
-
-#colorful-nav .navbar {
-    margin-bottom: 0px;
-}
-
-/* pozadi za navbarem */
-#colorful-nav {
     background-color: transparent;
 }
 
-#colorful-nav .navbar-nav {
+#navigation .navbar {
+    margin-bottom: 0px;
+}
+
+#navigation .navbar-nav {
     border-radius: 10px;
     float:none;
     height: 160px;
 }
 
-#colorful-nav .navbar-collapse {
+#navigation .navbar-collapse {
     border-top: 0;
 }
 
 /* jednotlive elementy navbaru */
-#colorful-nav ul>li {
+#navigation ul>li {
     float: left;
     text-align: center;
     width: 16.6%;
@@ -74,41 +71,38 @@ h3 {
 }
 
 /* animace */
-#colorful-nav ul>li.animated {
-    transition: 0.2s padding-top;
+#navigation ul>li.animated {
+    transition: 0.25s padding-top;
 }
 
 /* animace */
-#colorful-nav ul>li.animated:hover {
+#navigation ul>li.animated:hover {
     padding-top: 20px;
 }
 
 /* links */
-#colorful-nav .navbar-nav>a {
+#navigation .navbar-nav>a {
     padding-top: 25px;
     color: white;
 }
 
 /* links */
-#colorful-nav ul>a:hover,
-#colorful-nav ul>a:focus {
+#navigation ul>a:hover,
+#navigation ul>a:focus {
     background-color: transparent;
     text-decoration: none;
 }
 
 /* ikony */
-#colorful-nav .glyphicon {
+#navigation .glyphicon {
     font-size: 20px;
     margin-bottom: 10px;
     padding-top: 10px;
     color: white;
 }
 
-#colorful-nav .icon-bar {
-    background-color: black;
-}
-
-#colorful-nav .navbar-toggle {
+/* collapsed */
+#navigation .navbar-toggle {
     float: left;
     border-color: black;
     margin-left: 25px;
@@ -116,49 +110,45 @@ h3 {
     margin-bottom: 20px;
 }
 
-#colorful-nav .navbar-brand {
-    height: 100px;
-}
-
 /* barva textu */
-#colorful-nav h5{
+#navigation h5{
     color:white;
 }
 
 /* barva pozadi buttonu */
-#colorful-nav .redakcnisystem {
+#navigation .redakcnisystem {
     background-color: #f87912;
 }
 
-#colorful-nav .home {
+#navigation .home {
     background-color: #FFCC00;
 }
 
-#colorful-nav .profile {
+#navigation .articles {
     background-color: #AADD00;
 }
 
-#colorful-nav .statistics {
+#navigation .account {
     background-color: #00CCCC;
 }
 
-#colorful-nav .about {
+#navigation .about {
     background-color: #666699;
 }
 
-#colorful-nav .contact {
+#navigation .contact {
     background-color: #FF3333;
 }
 
 /* collapsed */
 @media screen and (max-width: 767px){
 
-    #colorful-nav ul>li {
+    #navigation ul>li {
         text-align: center;
         width: 100%;
     }
 
-    #colorful-nav ul>li:hover{
+    #navigation ul>li:hover{
         padding-top: 0px;
     }
 }
@@ -167,10 +157,6 @@ h3 {
 #myFooter {
     background-color: #3c3d41;
     color: white;
-}
-
-#myFooter .footer-copyright {
-    background-color: #3c3d41;
     padding-top: 10px;
     padding-bottom: 10px;
     text-align: center;
