--- a/views/assignments.phtml
+++ b/views/assignments.phtml
@@ -75,11 +75,11 @@
 
         <div class="form-group">
             <label for="user_id">ID uživatele:</label>
-            <input type="number" class="form-control" placeholder="Vložte ID uživatele" name="user_id">
+            <input type="number" class="form-control" placeholder="Vložte ID uživatele" required name="user_id">
         </div>
         <div class="form-group">
             <label for="article_id">ID článku:</label>
-            <input type="number" class="form-control" placeholder="Vložte ID článku" name="article_id">
+            <input type="number" class="form-control" placeholder="Vložte ID článku" required name="article_id">
         </div>
 
         <button type="submit" value="Uložit přidělení" class="btn btn-primary">Uložit přidělení</button>
