--- a/views/base.phtml
+++ b/views/base.phtml
@@ -33,7 +33,7 @@
 <?php endforeach ?>
 
 <!-- navigace - menu -->
-<nav class="navbar navbar-default navbar-fixed-top" id="colorful-nav">
+<nav class="navbar navbar-default navbar-fixed-top" id="navigation">
     <div class="navbar_container">
 
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -46,8 +46,8 @@
             <ul class="nav navbar-nav">
                 <li class="redakcnisystem"><a href="home"><span class="glyphicon glyphicon-list-alt"></span><h5>Redakční systém</h5></a></li>
                 <li class="animated home"><a href="home"><span class="glyphicon glyphicon-home"></span><h5>Home</h5></a></li>
-                <li class="animated profile"><a href="clanek"><span class="glyphicon glyphicon-pencil"></span><h5>Články</h5></a></li>
-                <li class="animated statistics"><a href="administrace"><span class="glyphicon glyphicon-user"></span><h5>Můj účet</h5></a></li>
+                <li class="animated articles"><a href="clanek"><span class="glyphicon glyphicon-pencil"></span><h5>Články</h5></a></li>
+                <li class="animated account"><a href="administrace"><span class="glyphicon glyphicon-user"></span><h5>Můj účet</h5></a></li>
                 <li class="animated about"><a href="aboutus"><span class="glyphicon glyphicon-info-sign"></span><h5>O nás</h5></a></li>
                 <li class="animated contact"><a href="kontakt"><span class="glyphicon glyphicon-earphone"></span><h5>Kontakt</h5></a></li>
             </ul>
