--- a/views/revieweditor.phtml
+++ b/views/revieweditor.phtml
@@ -10,15 +10,15 @@
 
     <div class="form-group">
         <label for="criterium_1">Relevantnost (1 - 10):</label>
-        <input type="number" class="form-control" placeholder="Vložte hodnocení od 1 do 10" name="criterium_1" value="<?= $review['criterium_1'] ?>">
+        <input type="number" class="form-control" placeholder="Vložte hodnocení od 1 do 10" name="criterium_1" required value="<?= $review['criterium_1'] ?>">
     </div>
     <div class="form-group">
         <label for="criterium_2">Kvalita článku (1 - 10):</label>
-        <input type="number" class="form-control" placeholder="Vložte hodnocení od 1 do 10" name="criterium_2" value="<?= $review['criterium_2'] ?>">
+        <input type="number" class="form-control" placeholder="Vložte hodnocení od 1 do 10" name="criterium_2" required value="<?= $review['criterium_2'] ?>">
     </div>
     <div class="form-group">
         <label for="criterium_3">Nezaujatost (1 - 10):</label>
-        <input type="number" class="form-control" placeholder="Vložte hodnocení od 1 do 10" name="criterium_3" value="<?= $review['criterium_3'] ?>">
+        <input type="number" class="form-control" placeholder="Vložte hodnocení od 1 do 10" name="criterium_3" required value="<?= $review['criterium_3'] ?>">
     </div>
     <div class="form-group">
         <label for="note">Poznámka:</label>
